--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,8 @@
 
     {{content-for "body-footer"}}
   
+    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-messaging.js"></script>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
